# NoodleSoup

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
deploy/k8s/: Chart.yaml
deploy/k8s/templates/: persistentvolumeclaim.yaml  statefulset.yaml
src/: dynamic_voice.py  get_invite.py  info.py  keep_alive.py  main.py  migrations.py  reset.py  restart.py  test.py  utils.py  verify.py
