[tool.poetry]
name = "NoodleSoup"
version = "1.0.1"
description = "Admin bot for a private gaming server."
authors = ["SuperNoodle", "ZeroNationality"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
